# image-builder-backend/image-storage-service/openapi.yml
@@ -2,16 +2,13 @@ openapi: 3.0.3
 info:
   title: ImageStorageService API
   version: 1.0.0
-servers:
-  - url: http://localhost:3000
 paths:
   /upload:
     post:
-      summary: Upload a file
-      description: Upload a file
+      description: Upload an ISO image file
       operationId: uploadFile
       requestBody:
-        description: The file to be uploaded
+        description: The ISO image file to be uploaded
         required: true
         content:
           application/x-iso9660-image:
@@ -25,13 +22,56 @@ paths:
         '200':
           description: File uploaded successfully
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  message:
+                    type: string
         '400':
-          description: Bad request, no file uploaded
+          description: No file uploaded
           content:
-            text/plain:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+  /download/{fileName}:
+    get:
+      description: Retrieve an ISO image by its file name
+      operationId: getIsoFile
+      parameters:
+        - name: fileName
+          in: path
+          required: true
+          schema:
+            type: string
+            description: The name of the file to be downloaded
+            example: 'WZ3h633-p.iso'
+      responses:
+        '200':
+          description: The image was found. The response is an .iso file
+          content:
+            application/x-iso9660-image:
               schema:
                 type: string
-              example: No file uploaded.
+                format: binary
+        '404':
+          description: File not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
